test/e2e/conformance/tests/httproute-default-backend.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: higress-conformance-infra-default-backend-service
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
  - host: "foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: infra-backend-v1
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: higress-conformance-infra-default-backend
  namespace: higress-conformance-infra
  annotations:
    nginx.ingress.kubernetes.io/default-backend: "foo.com/foo"
spec:
  ingressClassName: higress
  rules:
  - host: "bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/bar-error"
        backend:
          service:
            name: infra-backend-v1
            port:
              number: 8080
